@@ -72,8 +72,8 @@ Client::Client(
     m_suspended(false),
     m_connectOnResume(false),
     m_events(events),
-    m_sendFileThread(NULL),
-    m_writeToDropDirThread(NULL),
+    m_sendFileThread(nullptr),
+    m_writeToDropDirThread(nullptr),
     m_socket(NULL),
     m_useSecureNetwork(args.m_enableCrypto),
     m_args(args),
@@ -258,9 +258,9 @@ Client::enter(SInt32 xAbs, SInt32 yAbs, UInt32, KeyModifierMask mask, bool)
     m_screen->mouseMove(xAbs, yAbs);
     m_screen->enter(mask);
 
-    if (m_sendFileThread != NULL) {
+    if (m_sendFileThread) {
         StreamChunker::interruptFile();
-        m_sendFileThread = NULL;
+        m_sendFileThread.reset(nullptr);
     }
 }
 
@@ -827,9 +827,8 @@ void
 Client::onFileRecieveCompleted()
 {
     if (isReceivedFileSizeValid()) {
-        m_writeToDropDirThread = new Thread(
-            new TMethodJob<Client>(
-                this, &Client::writeToDropDirThread));
+        auto method = new TMethodJob<Client>(this, &Client::writeToDropDirThread);
+        m_writeToDropDirThread.reset(new Thread(method));
     }
 }
 
@@ -875,14 +874,13 @@ Client::isReceivedFileSizeValid()
 void
 Client::sendFileToServer(const char* filename)
 {
-    if (m_sendFileThread != NULL) {
+    if (m_sendFileThread) {
         StreamChunker::interruptFile();
     }
-    
-    m_sendFileThread = new Thread(
-        new TMethodJob<Client>(
-            this, &Client::sendFileThread,
-            static_cast<void*>(const_cast<char*>(filename))));
+
+    auto data = static_cast<void*>(const_cast<char*>(filename));
+    auto method = new TMethodJob<Client>(this, &Client::sendFileThread, data);
+    m_sendFileThread.reset(new Thread(method));
 }
 
 void
@@ -896,7 +894,7 @@ Client::sendFileThread(void* filename)
         LOG((CLOG_ERR "failed sending file chunks: %s", error.what()));
     }
 
-    m_sendFileThread = NULL;
+    m_sendFileThread.reset(nullptr);
 }
 
 void
