@@ -27,6 +27,7 @@
 #include "net/NetworkAddress.h"
 #include "base/EventTypes.h"
 #include "mt/CondVar.h"
+#include <memory>
 
 class EventQueueTimer;
 namespace synergy { class Screen; }
@@ -234,8 +235,9 @@ private:
     String              m_receivedFileData;
     DragFileList        m_dragFileList;
     String              m_dragFileExt;
-    Thread*             m_sendFileThread;
-    Thread*             m_writeToDropDirThread;
+    using AutoThread = std::unique_ptr<Thread>;
+    AutoThread          m_sendFileThread;
+    AutoThread          m_writeToDropDirThread;
     TCPSocket*          m_socket;
     bool                m_useSecureNetwork;
     bool                m_enableClipboard;
