@@ -443,7 +443,7 @@ TCPSocket::sendConnectionFailedEvent(const char* msg)
 void
 TCPSocket::sendEvent(Event::Type type)
 {
-    m_events->addEvent(Event(type, getEventTarget(), nullptr));
+    m_events->addEvent(Event(type, getEventTarget()));
 }
 
 void
