@@ -18,13 +18,14 @@
 #pragma once
 
 #include "common/basic_types.h"
+#include <base/EventTypes.h>
 
-class Chunk {
+class Chunk : public EventData {
 public:
     Chunk(size_t size);
     Chunk(Chunk const &) =delete;
     Chunk(Chunk &&) =delete;
-    ~Chunk();
+    ~Chunk() override;
 
     Chunk& operator=(Chunk const &) =delete;
     Chunk& operator=(Chunk &&) =delete;
